# Engel

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/commands/: new-feature.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  db.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  config.py
backend/app/services/: __init__.py  insight_engine.py  sort_engine.py  vector_service.py
docs/: dependencies.md  design-system.md  product-vision.md
docs/screens/: README.md
docs/specs/: spec-template.md
engel/: APIModels.swift  BackendClient.swift  ContentView.swift  HomeViewModel.swift  SDEntry.swift  SDInsight.swift  engelApp.swift
engel.xcodeproj/: project.pbxproj
engel/Assets.xcassets/engel-cream.colorset/: Contents.json
engel/Assets.xcassets/engel-ink-dim.colorset/: Contents.json
engel/Assets.xcassets/engel-ink.colorset/: Contents.json
engel/Services/: SessionStore.swift
engel/engel/theme/: Tokens.swift  Typography.swift
engel/features/capture/: RecordingManager.swift
engel/views/: AccountView.swift  EntryDetailView.swift  GlobeDetailView.swift  LoginView.swift  LogoutSheet.swift  OnboardingView.swift  SortView.swift  TwoFAView.swift  settings.swift
