[project]
name = "two-globes-backend"
version = "0.1.0"
description = "Backend service for the Two Globes iOS app."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "openai>=1.0.0,<2.0.0",
    "anthropic>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
